# se-toolkit-lab-8

./: .env.docker.example  .gitignore  .gitmodules  .re-approval  AGENTS.md  GIT_WORKFLOW_SUMMARY.md  LAB_COMPLETION.md  REPORT.md  TASK4C_BUGFIX.md  TASK4_COMPLETION.md  docker-compose.yml  pyproject.toml  setup.md  task-2.md  task-3.md  task-4.md
client-web-react/client-web-react/: Dockerfile
docker/: client-web-flutter.Dockerfile
mcp/mcp/mcp-obs/: pyproject.toml
mcp/mcp/mcp-obs/src/mcp_obs/: __init__.py  observability.py  server.py
mcp/mcp_lms/: server.py
nanobot/: .dockerignore  Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/nanobot/workspace/: AGENTS.md  TOOLS.md
nanobot/nanobot/workspace/skills/cron/: SKILL.md
nanobot/nanobot/workspace/skills/lms/: SKILL.md
nanobot/nanobot/workspace/skills/observability/: SKILL.md
nanobot/workspace/: AGENTS.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/cron/: SKILL.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: ensure-static-clients.sh  repair-submodules.sh  task2-flutter-volume.sh  verify-task2.ps1  verify-task2.sh
