[project]
name = "nanobot"
version = "0.1.0"
description = "LMS nanobot agent"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
    "lms-mcp",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp", editable = true }
# Path (not git): Docker builder image has no git — uv cannot clone during `uv sync`.
# Requires `nanobot-websocket-channel/` at repo root (`git submodule update --init`).
nanobot-webchat = { path = "../nanobot-websocket-channel", editable = true }
